# Sourcehold

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: check_formatting.yml  sourcehold.yml
AssetTool/: AssetTool.pro  MainWindow.cpp  MainWindow.hh  main.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
apple/: CMakeLists.txt  build.sh  install-dependencies-ios.sh  install-dependencies-macos.sh  install-ffmpeg-ios.sh  install-sdl2-ios.sh  install-tools.sh  run-on-ios-simulator.sh
apple/Common/: SHPathUtils.h  SHPathUtils.m
apple/Sourcehold.xcodeproj/: project.pbxproj
apple/cmake/: MakeiOSAppBundleAndLinkFrameworks.cmake
apple/iOS/Resources/Assets.xcassets/LoadingScreen.imageset/: Contents.json
apple/iOS/Resources/Assets.xcassets/LoadingScreenBorder.imageset/: Contents.json
apple/iOS/Resources/Assets.xcassets/LoadingScreenFront.imageset/: Contents.json
apple/iOS/Resources/Base.lproj/: LaunchScreen.storyboard
apple/iOS/Src/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
apple/iOS/Supporting Files/: Info.plist
cmake/: AddImportedTarget.cmake  CompilerWarnings.cmake  Dependencies.cmake  FindFFmpeg.cmake  FindLibswresample.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  PlatformCheck.cmake  Preamble.cmake  ProjectOptions.cmake  Warnings.cmake
macos/: CMakeLists.txt  build.sh  install-dependencies.sh  install-tools.sh  set-up-n-build.sh  set-up.sh
macos/Sourcehold.xcodeproj/: project.pbxproj
macos/src/: PathUtils.h  PathUtils.m
src/: AnimationHandler.cpp  AnimationHandler.h  Assets.cpp  Assets.h  BinkVideo.cpp  BinkVideo.h  Building.cpp  Building.h  CMakeLists.txt  Commandline.cpp  Commandline.h  Config.h  Display.cpp  Display.h  Entity.h  FFmpegUtil.cpp  FFmpegUtil.h  GUI.cpp  GUI.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameMap.cpp  GameMap.h  GameOptions.h  GameState.cpp  Gm1File.cpp  Gm1File.h  Logger.cpp  Logger.h  Main.cpp  MainMenu.cpp  MainMenu.h  MlbFile.cpp  MlbFile.h  Parser.cpp  Parser.h  RenderList.cpp  RenderList.h  (+16 more)
src/Assets/: Assets.h
src/Audio/: Audio.cpp  Audio.h  AudioSource.cpp  AudioSource.h  CMakeLists.txt  Effect.cpp  Effect.h  Playlist.cpp  Playlist.h  Song.cpp  Song.h  SoundManager.cpp  SoundManager.h
src/Common/: CMakeLists.txt  Line.h  Rect.h  Shapes.h  Vector2.h  Vector3.h
src/ECS/: CMakeLists.txt  ECS.cpp  ECS.h  EnTT.h  Manager.cpp  Manager.h
src/ECS/Component/: Component.h
src/ECS/System/: AnimationFrameSystem.cpp  AnimationFrameSystem.h  BasicSystem.cpp  BasicSystem.h  MoveSystem.cpp  MoveSystem.h  RenderSystem.cpp  RenderSystem.h  TestTeleportingDeerSystem.cpp  TestTeleportingDeerSystem.h
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
src/Engine/Assets/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt
src/Engine/Assets/AssetsDef/: AssetsDef.h  CMakeLists.txt
src/Engine/Assets/Parsers/: AniFile.cpp  AniFile.h  CMakeLists.txt  CfgFile.cpp  CfgFile.h  Gm1File.cpp  Gm1File.h  HlpFile.h  MlbFile.cpp  MlbFile.h  Parser.cpp  TexFile.cpp  TexFile.h  TgxFile.cpp  TgxFile.h  VolumeTxt.h
src/Engine/Audio/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
src/Engine/Config/: Config.h
src/Engine/FileSystem/: CMakeLists.txt  FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h
src/Engine/GameOptions/: GameOptions.h
src/Engine/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/Engine/Video/: CMakeLists.txt  VideoEngine.cpp  VideoEngine.h
src/Events/: CMakeLists.txt  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Touch.h
src/FFMPEG/: BinkStream.cpp  BinkStream.h  CMakeLists.txt  Decoder.cpp  Decoder.h  FFmpegUtil.cpp  FFmpegUtil.h
src/GUI/: CMakeLists.txt  Credits.cpp  Credits.h  Dialog.cpp  Dialog.h  Ingame.cpp  Ingame.h  Layout.cpp  Layout.h  LineEdit.cpp  LineEdit.h  MainMenu.cpp  MainMenu.h  MenuUtils.cpp  MenuUtils.h  NarrScreen.cpp  NarrScreen.h  Startup.cpp  Startup.h  StaticElement.cpp  StaticElement.h  Table.cpp  Table.h  UIState.h
src/GUI/Widgets/: Button.cpp  Button.h  Container.cpp  Container.h  LineEdit.cpp  LineEdit.h  StaticElement.cpp  StaticElement.h  Table.cpp  Table.h  Widget.h
src/Menus/: BuilderMenu.cpp  BuilderMenu.h  CombatMenu.cpp  CombatMenu.h  EconomicsMenu.cpp  EconomicsMenu.h  MainMenu.cpp  MainMenu.h  MenuUtils.cpp  MenuUtils.h
src/OpenAL/: AudioSource.cpp  AudioSource.h  CMakeLists.txt  OpenAL.cpp  OpenAL.h
src/Parsers/: AniFile.cpp  AniFile.h  BinkVideo.cpp  BinkVideo.h  CMakeLists.txt  CfgFile.cpp  CfgFile.h  Gm1File.cpp  Gm1File.h  HlpFile.cpp  HlpFile.h  MapFile.cpp  MapFile.h  MlbFile.cpp  MlbFile.h  Parser.cpp  Parser.h  Riff.h  TexFile.cpp  TexFile.h  TgxFile.cpp  TgxFile.h  VolumeTxt.cpp  VolumeTxt.h
src/Rendering/: BinkVideo.cpp  BinkVideo.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Display.cpp  Display.h  Font.cpp  Font.h  RenderList.cpp  RenderList.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Rendering.h  Resolution.h  Shapes.h  StaticElement.cpp  StaticElement.h  StaticElement.ipp  Surface.cpp  Surface.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  Tileset.cpp  Tileset.h
src/SDL/: CMakeLists.txt  SDLBackend.cpp  SDLBackend.h  SDLFactories.cpp  SDLFactories.h  SDLHelpers.h  SurfaceLock.h  TextureAccessor.cpp  TextureAccessor.h
src/Sound/: Sound.cpp  Sound.h
src/System/: CMakeLists.txt  CmdLine.cpp  Commandline.h  Config.h  FileUtil.cpp  FileUtil.h  Logger.cpp  Logger.h  ModCampaign.cpp  ModCampaign.h  System.h  filesystem.h
src/Utils/: MultiIndexMap.h
test/: AudioTest.cpp  BinkVideoTest.cpp  CMakeLists.txt  ColorTest.cpp  SDLBackendTest.cpp  SDLTest.cpp  ShapesTest.cpp  SurfaceTest.cpp  TextureAccessorTest.cpp  TextureAtlasTest.cpp  TextureTest.cpp
travis/: install.sh
ubuntu/: check-formatting.sh  install-dependencies.sh
unix/: format_source_files.sh
windows/: install-dependencies.sh
(+4 files in other folders)
